# junk

./: .eslintignore  .eslintrc.json  .firebaserc  .gitignore  .wotanrc.json  README.md  denoise.py  index.html  main.125a9a6b306fa00addb3.js  main.15da218b73e7e1986b65.js  main.390938165ab3c1f2bf35.js  main.43a5f618a4869a5dbed2.js  main.51a037f6329763abc3e0.js  main.63c9c7f51701e9d96f18.js  main.77b0dc9427fe8ddf7630.js  main.7c8a024bb645058aea23.css  main.7c8a024bb645058aea23.js  main.911a1c16c34bd7846862.js  main.aae97d9c36de1d4b77fb.js  main.c502c613536a11804550.js  main.dde564078758f9e3b576.js  package.json  pet-model.tfm  requirements.txt  runtime~main.c14f7fb750b18a88d908.js  tsconfig.base.json  tsconfig.json  tsconfig.lint.json  webpack.config.ts
.github/workflows/: deploy.yml
.husky/: pre-commit
VRGame/: .gitignore
VRGame/ProjectSettings/: ProjectSettings.asset
danilll/: index.html  main.js
danilll/api/: index.mjs
danilll/demo_01/: index.html  main.js
danilll/demo_02/: index.html  main.js
scenario1/: .gitignore  Cargo.toml
scenario1/tcpclient/src/: main.rs
scenario1/tcpserver/src/: main.rs
src/: CameraController.ts  global.d.ts  index.ts  routes.ts  tsconfig.json  util.ts
src/assets/sorting_hat/: .gitignore  sorting_hat.ipynb  trainHat.ts
src/assets/sorting_hat/sorting_hat/: model.json
src/assets/titanic_data/: new_test_x.json  new_test_y.json  new_train_x.json  new_train_y.json  notebook.ipynb  pokemon_notebook.ipynb
src/demo/: Demo.ts  createBoxDemo.ts  createWasmDemoFactory.ts
src/demo/natalyj-demo/: 3jsWrappers.ts
src/demo/natalyj-demo/Scanner/: useScanner.ts  (+2 more)
src/demo/vinneyto-demo/: createCameraDemo.ts  createFaceDetection.ts  createGameDemo.ts  createGltfSkinningDemo.ts  createImageClassifyDemo.ts  createPhysicsDemo.ts  createWasmGltfDemo.ts  nonlinearTraining101.ts  objectsDetectionDemo.ts  objectsDetectionImageDemo.ts  objectsDetectionVideoDemo.ts  perlinNoiseDemo.ts  petDetectionDemo.ts  skinning.ts  titanicTraining.ts  wasm-skinning.ts  wasm-triangle.ts
src/engine/: index.ts  types.ts
src/engine/canvas/: Canvas.ts
src/engine/gltf/: createAttributes.ts
src/engine/math/: Matrix4.ts  Quaternion.ts  Vector3.ts  Vector4.ts  index.ts
src/engine/renderer/: Context.ts  Renderer.ts  Shader.ts  types.ts
src/engine/scene/: Camera.ts  Geometry.ts  Material.ts  Mesh.ts  Node.ts  Renderer.ts
src/game/renderer/: Mesh.ts  Node.ts  Renderer.ts  util.ts
src/gltf/: fetchGLTF.ts  loadGLTF.ts  renderGLTF.ts  three.ts
src/gltf/types/: GLTF.ts  GLTFAccessor.ts  GLTFBase.ts  GLTFBuffer.ts  GLTFBufferView.ts  GLTFImage.ts  GLTFJson.ts  GLTFMaterial.ts  GLTFMesh.ts  GLTFNode.ts  GLTFNormalTextureInfo.ts  GLTFOcclusionTextureInfo.ts  GLTFPrimitive.ts  GLTFRoot.ts  GLTFSampler.ts  GLTFScene.ts  GLTFTexture.ts  GLTFTextureInfo.ts  GLTFpbrMetallicRoughness.ts  index.ts
src/styles/: index.ts  main.css
src/webgpu/: Context.ts  helpers.ts
titanic_data/: notebook.ipynb
tools/: cut-skybox.ts  tf-model-loader.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/demo/: canvas.rs  gltf_renderer.rs  mod.rs  perlin.rs  physics.rs  raytracing.rs  skinning.rs  triangle.rs  webgl2_canvas.rs  webgl_canvas.rs
wasm/src/demo/shaders/: skinning_vert.glsl  triangle_frag.glsl
wasm/src/math/: matrix4.rs  mod.rs  vector3.rs  vector4.rs
wasm/src/renderer/: context.rs  helpers.rs  mod.rs  shader.rs
wasm/src/renderer/webgl/: camera.rs  context.rs  define.rs  framebuffer.rs  geometry.rs  gltf.rs  gltf_util.rs  material.rs  mesh.rs  mod.rs  pass.rs  render.rs  renderer.rs  shader.rs  store.rs  texture.rs  turntable.rs
wasm/src/renderer/webgl/material/: debug_material_params.rs  material.rs  material_params.rs  mod.rs  pbr_material.rs  skybox_material.rs
wasm/src/renderer/webgl/material/shaders/: pbr_frag.glsl  pbr_vert.glsl  skybox_frag.glsl  skybox_vert.glsl
wasm/src/renderer/webgl/shaders/: pbr_frag.glsl  pbr_vert.glsl
wasm/src/scene/: node.rs  scene.rs
wgpu-tutorial/: Cargo.toml
wgpu-tutorial/src/: main.rs
(+45 files in other folders)
