[package]
name = "wasm"
version = "0.1.0"
authors = ["vinneyto <vinneyto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.28"
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"
log = "0.4.8"
js-sys = "0.3.38"
wasm-bindgen = "0.2.61"
nalgebra = "0.30"
ncollide3d = "0.33"
generational-arena = "0.2"
noise = "0.7.0"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.gltf]
version = "1.0"
features = ["extras", "names"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]

[dependencies.web-sys]
version = "0.3.39"
features = [
    "console",
    "Document",
    "CssStyleDeclaration",
    "Window",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "WebGlBuffer",
    "WebGl2RenderingContext",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlFramebuffer",
    "WebGlActiveInfo",
    "WebGlUniformLocation",
    "WebGlVertexArrayObject"
]
